--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Simple Interest Calculator</title>
+    <title>Compound Interest Calculator</title>
     </head>
     <body>
         <div class="maindiv">
